projects/lang/pola/proto/src/main/java/org/skb/lang/pola/proto/grammars/polaEbnfParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g 2011-07-07 22:24:49

  package org.skb.lang.pola.proto.grammars;

  import java.util.LinkedHashMap;

  import org.skb.lang.pola.proto.PolaPass1_Ebnf;
  import org.skb.tribe.LanguageTokens;
  import org.skb.lang.pola.proto.PolaTokensConstants;
  import org.skb.util.ReportManager;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class polaEbnfParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_STAGE", "AT_ENVIRONMENT", "AT_CLEVEL", "AT_LANGUAGE", "IDENT", "AT_SPEC", "CPP_DIRECTIVE", "POLA_POLICY", "POLA_DEONT_AUTH", "POLA_DEONT_EXEM", "POLA_DEONT_OBLG", "POLA_DEONT_PROH", "POLA_MEPO_DELE", "POLA_MEPO_REVO", "POLA_PC_LEVEL", "POLA_RULE_STRUCT_ECA", "POLA_RULE_STRUCT_GOAL", "POLA_RULE_STRUCT_UTIL", "POLA_EVENT", "POLA_GROUP", "POLA_COMPOSITE", "POLA_ATOMIC", "POLA_NONSTD", "POLA_CONDITION", "POLA_ACTION", "POLA_SEQ_NUMER", "VAL_INTEGER", "POLA_HASBEEN_EVALED", "VAL_DSTRING", "VOID", "SHORT", "INTEGER", "LONG", "OCTET", "HEX", "BINARY", "FLOAT", "DOUBLE", "CHAR", "STRING", "BOOLEAN", "VAL_OCT", "VAL_HEX", "VAL_BINARY", "VAL_FLOAT", "VAL_CHAR", "VAL_STRING", "POLA_NULL", "POLA_TRUE", "POLA_FALSE", "ARRAY", "BODY", "STRUCT", "TYPEDEF", "AT_PROVIDES", "AT_SCOPE", "WS", "SL_COMMENT", "ML_COMMENT", "ESC", "UnicodeEscape", "OctalEscape", "HexDigit", "OctDigit", "BinDigit", "Exponent", "FloatSuffix", "CPP_FILENAME", "'architecture'", "'model'", "'design'", "'development'", "'deployment'", "'runtime'", "'production'", "'test'", "'demonstrator'", "'business'", "'system'", "'element'", "';'", "'{'", "'}'", "'='", "'administration'", "'device'", "'instance'", "'::='", "':'", "'::'", "'['", "']'"
    };
    public static final int EOF=-1;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int AT_STAGE=4;
    public static final int AT_ENVIRONMENT=5;
    public static final int AT_CLEVEL=6;
    public static final int AT_LANGUAGE=7;
    public static final int IDENT=8;
    public static final int AT_SPEC=9;
    public static final int CPP_DIRECTIVE=10;
    public static final int POLA_POLICY=11;
    public static final int POLA_DEONT_AUTH=12;
    public static final int POLA_DEONT_EXEM=13;
    public static final int POLA_DEONT_OBLG=14;
    public static final int POLA_DEONT_PROH=15;
    public static final int POLA_MEPO_DELE=16;
    public static final int POLA_MEPO_REVO=17;
    public static final int POLA_PC_LEVEL=18;
    public static final int POLA_RULE_STRUCT_ECA=19;
    public static final int POLA_RULE_STRUCT_GOAL=20;
    public static final int POLA_RULE_STRUCT_UTIL=21;
    public static final int POLA_EVENT=22;
    public static final int POLA_GROUP=23;
    public static final int POLA_COMPOSITE=24;
    public static final int POLA_ATOMIC=25;
    public static final int POLA_NONSTD=26;
    public static final int POLA_CONDITION=27;
    public static final int POLA_ACTION=28;
    public static final int POLA_SEQ_NUMER=29;
    public static final int VAL_INTEGER=30;
    public static final int POLA_HASBEEN_EVALED=31;
    public static final int VAL_DSTRING=32;
    public static final int VOID=33;
    public static final int SHORT=34;
    public static final int INTEGER=35;
    public static final int LONG=36;
    public static final int OCTET=37;
    public static final int HEX=38;
    public static final int BINARY=39;
    public static final int FLOAT=40;
    public static final int DOUBLE=41;
    public static final int CHAR=42;
    public static final int STRING=43;
    public static final int BOOLEAN=44;
    public static final int VAL_OCT=45;
    public static final int VAL_HEX=46;
    public static final int VAL_BINARY=47;
    public static final int VAL_FLOAT=48;
    public static final int VAL_CHAR=49;
    public static final int VAL_STRING=50;
    public static final int POLA_NULL=51;
    public static final int POLA_TRUE=52;
    public static final int POLA_FALSE=53;
    public static final int ARRAY=54;
    public static final int BODY=55;
    public static final int STRUCT=56;
    public static final int TYPEDEF=57;
    public static final int AT_PROVIDES=58;
    public static final int AT_SCOPE=59;
    public static final int WS=60;
    public static final int SL_COMMENT=61;
    public static final int ML_COMMENT=62;
    public static final int ESC=63;
    public static final int UnicodeEscape=64;
    public static final int OctalEscape=65;
    public static final int HexDigit=66;
    public static final int OctDigit=67;
    public static final int BinDigit=68;
    public static final int Exponent=69;
    public static final int FloatSuffix=70;
    public static final int CPP_FILENAME=71;

    // delegates
    // delegators


        public polaEbnfParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public polaEbnfParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return polaEbnfParser.tokenNames; }
    public String getGrammarFileName() { return "V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g"; }


      private LanguageTokens myTokens;
      private PolaPass1_Ebnf pass;
      private Token base_type;
      private boolean isArray=false;

      public void init() {
        this.pass=new PolaPass1_Ebnf();
        this.myTokens = new LanguageTokens();
        this.myTokens.addTokens(tokenNames);
      }

      public void setFilename(String f){ReportManager.getInstance().setFileName(f);}
      public String getFilename(){return ReportManager.getInstance().getFileName();}

      private void setCppFile(String cpp){
        String fn=cpp.substring(1,cpp.lastIndexOf(':'));
        fn=fn.replace("file \"","");
        this.setFilename(fn);
      }

      public int  numberOfErrors() {return ReportManager.getInstance().noOfErrors();}
      public void resetErrors()    {ReportManager.getInstance().resetNoOfErrors();}
      public void displayRecognitionError(String[] tokenNames, RecognitionException re){ReportManager.getInstance().reportError(super.getErrorMessage(re, this.myTokens.getTokenNames()), re);}


    public static class a3dsStage_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "a3dsStage"
    // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:114:1: a3dsStage : ( 'architecture' | 'model' | 'design' | 'development' | 'deployment' | 'runtime' );
    public final polaEbnfParser.a3dsStage_return a3dsStage() throws RecognitionException {
        polaEbnfParser.a3dsStage_return retval = new polaEbnfParser.a3dsStage_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set1=null;

        CommonTree set1_tree=null;

        try {
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:114:25: ( 'architecture' | 'model' | 'design' | 'development' | 'deployment' | 'runtime' )
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set1=(Token)input.LT(1);
            if ( (input.LA(1)>=72 && input.LA(1)<=77) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set1));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "a3dsStage"

    public static class a3dsEnvironment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "a3dsEnvironment"
    // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:115:1: a3dsEnvironment : ( 'production' | 'test' | 'demonstrator' );
    public final polaEbnfParser.a3dsEnvironment_return a3dsEnvironment() throws RecognitionException {
        polaEbnfParser.a3dsEnvironment_return retval = new polaEbnfParser.a3dsEnvironment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set2=null;

        CommonTree set2_tree=null;

        try {
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:115:25: ( 'production' | 'test' | 'demonstrator' )
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set2=(Token)input.LT(1);
            if ( (input.LA(1)>=78 && input.LA(1)<=80) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set2));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "a3dsEnvironment"

    public static class a3dsCLevel_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "a3dsCLevel"
    // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:116:1: a3dsCLevel : ( 'business' | 'system' | 'element' );
    public final polaEbnfParser.a3dsCLevel_return a3dsCLevel() throws RecognitionException {
        polaEbnfParser.a3dsCLevel_return retval = new polaEbnfParser.a3dsCLevel_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set3=null;

        CommonTree set3_tree=null;

        try {
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:116:25: ( 'business' | 'system' | 'element' )
            // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set3=(Token)input.LT(1);
            if ( (input.LA(1)>=81 && input.LA(1)<=83) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set3));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "a3dsCLevel"

    public static class polaSpecification_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "polaSpecification"
    // V:\\dev\\skb\\projects\\lang\\pola\\proto\\src\\main\\java\\org\\skb\\lang\\pola\\proto\\grammars\\polaEbnf.g:118:1: polaSpecification : cpp_directive AT_STAGE a3dsStage ';' AT_ENVIRONMENT a3dsEnvironment ';' AT_CLEVEL a3dsCLevel ';' AT_LANGUAGE l= IDENT ';' AT_SPEC spec= IDENT ';' ( polaDefinition )* EOF -> ^( AT_SPEC a3dsStage a3dsEnvironment a3dsCLevel ^( AT_LANGUAGE $l) ^( AT_SPEC $spec) cpp_directive ( polaDefinition )* ) ;
    public final polaEbnfParser.polaSpecification_return polaSpecification() throws RecognitionException {
        polaEbnfParser.polaSpecification_return retval = new polaEbnfParser.polaSpecification_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token l=null;
        Token spec=null;
        Token AT_STAGE5=null;
        Token char_literal7=null;
        Token AT_ENVIRONMENT8=null;
        Token char_literal10=null;
        Token AT_CLEVEL11=null;
        Token char_literal13=null;
        Token AT_LANGUAGE14=null;
        Token char_literal15=null;
        Token AT_SPEC16=null;
        Token char_literal17=null;
        Token EOF19=null;
        polaEbnfParser.cpp_directive_return cpp_directive4 = null;

        polaEbnfParser.a3dsStage_return a3dsStage6 = null;

        polaEbnfParser.a3dsEnvironment_return a3dsEnvironment9 = null;

        polaEbnfParser.a3dsCLevel_return a3dsCLevel12 = null;

        polaEbnfParser.polaDefinition_return polaDefinition18 = null;


        CommonTree l_tree=null;
        CommonTree spec_tree=null;
        CommonTree AT_STAGE5_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree AT_ENVIRONMENT8_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree AT_CLEVEL11_tree=null;
        CommonTree char_literal13_tree=null;
        CommonTree AT_LANGUAGE14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree AT_SPEC16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree EOF19_tree=null;
        RewriteRuleTokenStream stream_AT_STAGE=new RewriteRuleTokenStream(adaptor,"token AT_STAGE");
        RewriteRuleTokenStream stream_AT_CLEVEL=new RewriteRuleTokenStream(adaptor,"token AT_CLEVEL");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_AT_SPEC=new RewriteRuleTokenStream(adaptor,"token AT_SPEC");
        RewriteRuleTokenStream stream_AT_LANGUAGE=new RewriteRuleTokenStream(adaptor,"token AT_LANGUAGE");
        RewriteRuleTokenStream stream_AT_ENVIRONMENT=new RewriteRuleTokenStream(adaptor,"token AT_ENVIRONMENT");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_84=new RewriteRuleTokenStream(adaptor,"token 84");
